BusOne/src/objects/Call_Clickstream_vod__c.object
<CustomObject>
    <description>Object containing clickstream data received from CLM system.</description>
    <fields>
        <fullName>Answer_vod__c</fullName>
        <description>Survey Answer from CLM System.  May be a comma delimited list, if there are multiple answers.</description>
        <label>Answer</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AuxillaryId_vod__c</fullName>
        <description>Auxillary Id tied to the presentation. Used by customers as a reference field. No Veeva functionality keys off this field.</description>
        <label>Auxillary Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_ID_vod__c</fullName>
        <description>ID of the slide the clickstream data is from.</description>
        <label>CLM ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_vod__c</fullName>
        <description>The Call this clickstream data is associated with.</description>
        <label>Call</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipLabel>Call Clickstreams</relationshipLabel>
        <relationshipName>Call_Clickstreams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Key_Message_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Key Message that represents the slide that this survey or clickstream is from.</description>
        <label>Key Message</label>
        <referenceTo>Key_Message_vod__c</referenceTo>
        <relationshipLabel>Call Clickstreams</relationshipLabel>
        <relationshipName>Call_Clickstreams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ParentId_vod__c</fullName>
        <description>Parent Id of the presentation.</description>
        <label>Parent Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Popup_Opened_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a popup menu was opened on a slide, from CLM System.</description>
        <label>Popup Opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Possible_Answers_vod__c</fullName>
        <description>Comma separated list of possible answers to a survey question, or the items in a dropdown.</description>
        <label>Possible Answers</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Presentation_ID_vod__c</fullName>
        <description>ID of the presentation that this clickstream data is from.</description>
        <label>Presentation ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product the survey question is regarding.</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Call Clickstreams</relationshipLabel>
        <relationshipName>Call_Clickstreams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_vod__c</fullName>
        <description>Survey Question</description>
        <label>Survey Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Range_Value_vod__c</fullName>
        <description>Value of a Range control on a slide, from CLM System.</description>
        <label>Range Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision_vod__c</fullName>
        <description>Revision number of the presentation.</description>
        <label>Revision</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rollover_Entered_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a rollover section on a slide was entered, from CLM System.</description>
        <label>Rollover Entered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selected_Items_vod__c</fullName>
        <description>Items selected from a pulldown on a slide, from CLM System. Double semi-colon separated list if there is more than one value.</description>
        <label>Selected Items</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Type_vod__c</fullName>
        <description>Type of survey.</description>
        <label>Survey Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Choose One</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Choose Many</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Feedback</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text_Entered_vod__c</fullName>
        <description>Text entered into a text box on a slide, from CLM System.</description>
        <label>Text Entered</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Toggle_Button_On_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a toggle button on a slide is on or off, from CLM System.</description>
        <label>Toggle Button On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Track_Element_Description_vod__c</fullName>
        <description>Description of the track element, from CLM System.</description>
        <label>Track Element Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Track_Element_Id_vod__c</fullName>
        <description>CLM System Id of the track element.</description>
        <label>Track Element Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Track_Element_Type_vod__c</fullName>
        <description>Type of the track element, from CLM System.</description>
        <label>Track Element Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usage_Duration_vod__c</fullName>
        <description>Usage Duration, from CLM System. Represents a time span, value is in ticks. 10,000,000 ticks = 1 second.</description>
        <label>Usage Duration</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usage_Start_Time_vod__c</fullName>
        <description>Usage Start Time from CLM system.</description>
        <label>Usage Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>Call Clickstream</label>
    <nameField>
        <displayFormat>CCS{00000000}</displayFormat>
        <label>Call Clickstream Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Clickstreams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>